@@ -1,3 +1,9 @@
+* mirror support in:
+  - backports fetching
+  - tarball fetching
+* offer removal of no-longer-supported apps
+
+
 UpdateManager.Common.aptsources.py:
 - make the distro detection in sources.list more clever by using the
   origin informaton to avoid adding full uris to (unofficial/internal)
