@@ -9,6 +9,12 @@ update-manager (1:0.67) gutsy; urgency=low
   * DistUpgrade/DistUpgradeControler.py:
     - fix PreRequists fetching 
     - better error checking/logging
+  * DistUpgrade/DistUpgradeViewGtk.py,
+    DistUpgrade/DistUpgradeViewKDE.py,:
+    - improve error message when a package fails to install
+      (thanks to Chris Jones)
+  * DistUpgrade/DistUpgradeViewGtk.py:
+    - show "cancel" button while fetching stuff
 
  --
 
